--- a/style.scss
+++ b/style.scss
@@ -46,76 +46,83 @@ body,html{
 .box4{
     background-color: indigo;
     width:31%;
-    margin-right: 30px;
+    margin: 0 0 0 5px;
 }
 .box5 {
-    background-color: lightblue;
+    background-color: burlywood;
     width:31%;
-   margin-right: 30px;
+   margin: 0 3%;
 }
 .box6 {
     background-color: lightgreen;
     width:31%;
+    margin:0 5px 0 0;
     
 }
 .box7 {
     background-color: lime;
     width: 24%;
-    margin-top: 10px;
-    margin-right: 10px;
+    margin: 15px 5px 0 5px;
+   
 }
 .box8 {
     background-color: maroon;
     width: 24%;
-    margin-right: 10px;
-    margin-top: 10px;
+    margin: 15px 5px 0 5px;
 }
 .box9 {
     background-color: orange;
     width: 24%;
-    margin-right: 10px;
-    margin-top: 10px;
+    margin: 15px 5px 0 5px;
 }
 
 .box10 {
     background-color: saddlebrown;
     width: 24%;
-    margin-top: 10px;
+    margin: 15px 5px 0 5px;
 }
 
 @media screen and (max-width: 768px) {
 .box1 {
-    width: 100%;
+    width: 97.3%;
+    margin: 5px 5px 5px 10px ;
 }
 .box2{
-    width: 100%;
+    width: 97.3%;
+    margin: 5px 5px 5px 10px ;
     
 }
+.box3 {
+    width: 97.3%;
+    margin: 5px 5px 5px 10px ;
+}
 .box4{
-    width: 100%;
-    margin-bottom: 10px;
+    width: 97.3%;
+    margin: 5px 5px 5px 10px ;
 }
 .box5 {
-    width: 100%;
-    margin-bottom: 10px;
+    width: 97.3%;
+    margin: 5px 5px 5px 10px ;
 }
 .box6 {
-    width: 100%;
-    margin-bottom: 10px;
+    width: 97.3%;
+    margin: 5px 5px 5px 10px ;
 }
 .box7 {
     width: 48%;
+    margin: 0 0 5px 10px
 }
 .box8 {
     width: 48%;
-
+    margin: 0 0 5px 10px
 }
 .box9 {
     width: 48%;
-
+    margin: 0 0 5px 10px
 }
 .box10 {
     width: 48%;
+    margin: 0 0 5px 10px
 }
 }
 @media screen and (max-width: 580px) {
