--- a/style.css
+++ b/style.css
@@ -1,1 +1,129 @@
-*{margin:0px}body,html{width:100%;height:100%}.container{width:100%;max-width:1100px;margin-left:auto;margin-right:auto;height:200px}#header{height:120px}.box{width:50%;height:120px;float:left}.box1{background-color:yellow;width:49%;margin:5px 5px 5px 5px;display:inline}.box2{background-color:turquoise;width:49%;margin:5px 5px 5px 5px;display:inline}.box3{background-color:grey;width:99%;height:300px;margin:5px 5px 5px 5px}.box4{background-color:indigo;width:31%;margin-right:30px}.box5{background-color:lightblue;width:31%;margin-right:30px}.box6{background-color:lightgreen;width:31%}.box7{background-color:lime;width:24%;margin-top:10px;margin-right:10px}.box8{background-color:maroon;width:24%;margin-right:10px;margin-top:10px}.box9{background-color:orange;width:24%;margin-right:10px;margin-top:10px}.box10{background-color:saddlebrown;width:24%;margin-top:10px}@media screen and (max-width: 768px){.box1{width:100%}.box2{width:100%}.box4{width:100%;margin-bottom:10px}.box5{width:100%;margin-bottom:10px}.box6{width:100%;margin-bottom:10px}.box7{width:48%}.box8{width:48%}.box9{width:48%}.box10{width:48%}}@media screen and (max-width: 580px){.box1{width:100%}.box2{width:100%}.box4{width:100%;margin-bottom:10px}.box5{width:100%;margin-bottom:10px}.box6{width:100%;margin-bottom:10px}.box7{width:100%}.box8{width:100%}.box9{width:100%}.box10{width:100%}}
+* {
+  margin: 0px; }
+
+body, html {
+  width: 100%;
+  height: 100%; }
+
+.container {
+  width: 100%;
+  max-width: 1100px;
+  margin-left: auto;
+  margin-right: auto;
+  height: 200px; }
+
+#header {
+  height: 120px; }
+
+.box {
+  width: 50%;
+  height: 120px;
+  float: left; }
+
+.box1 {
+  background-color: yellow;
+  width: 49%;
+  margin: 5px 5px 5px 5px;
+  display: inline; }
+
+.box2 {
+  background-color: turquoise;
+  width: 49%;
+  margin: 5px 5px 5px 5px;
+  display: inline; }
+
+.box3 {
+  background-color: grey;
+  width: 99%;
+  height: 300px;
+  margin: 5px 5px 5px 5px; }
+
+.box4 {
+  background-color: indigo;
+  width: 31%;
+  margin: 0 0 0 5px; }
+
+.box5 {
+  background-color: burlywood;
+  width: 31%;
+  margin: 0 3%; }
+
+.box6 {
+  background-color: lightgreen;
+  width: 31%;
+  margin: 0 5px 0 0; }
+
+.box7 {
+  background-color: lime;
+  width: 24%;
+  margin: 15px 5px 0 5px; }
+
+.box8 {
+  background-color: maroon;
+  width: 24%;
+  margin: 15px 5px 0 5px; }
+
+.box9 {
+  background-color: orange;
+  width: 24%;
+  margin: 15px 5px 0 5px; }
+
+.box10 {
+  background-color: saddlebrown;
+  width: 24%;
+  margin: 15px 5px 0 5px; }
+
+@media screen and (max-width: 768px) {
+  .box1 {
+    width: 97.3%;
+    margin: 5px 5px 5px 10px; }
+  .box2 {
+    width: 97.3%;
+    margin: 5px 5px 5px 10px; }
+  .box3 {
+    width: 97.3%;
+    margin: 5px 5px 5px 10px; }
+  .box4 {
+    width: 97.3%;
+    margin: 5px 5px 5px 10px; }
+  .box5 {
+    width: 97.3%;
+    margin: 5px 5px 5px 10px; }
+  .box6 {
+    width: 97.3%;
+    margin: 5px 5px 5px 10px; }
+  .box7 {
+    width: 48%;
+    margin: 0 0 5px 10px; }
+  .box8 {
+    width: 48%;
+    margin: 0 0 5px 10px; }
+  .box9 {
+    width: 48%;
+    margin: 0 0 5px 10px; }
+  .box10 {
+    width: 48%;
+    margin: 0 0 5px 10px; } }
+
+@media screen and (max-width: 580px) {
+  .box1 {
+    width: 100%; }
+  .box2 {
+    width: 100%; }
+  .box4 {
+    width: 100%;
+    margin-bottom: 10px; }
+  .box5 {
+    width: 100%;
+    margin-bottom: 10px; }
+  .box6 {
+    width: 100%;
+    margin-bottom: 10px; }
+  .box7 {
+    width: 100%; }
+  .box8 {
+    width: 100%; }
+  .box9 {
+    width: 100%; }
+  .box10 {
+    width: 100%; } }
